--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "license": "MIT",
   "dependencies": {
     "github-markdown-css": "^2.10.0",
+    "ipfs": "^0.32.1",
     "ipfs-mini": "^1.1.2",
     "markdown-it": "^8.4.2",
     "markdown-it-katex": "^2.0.3",
-    "mz": "^2.7.0"
+    "mz": "^2.7.0",
+    "node-fetch": "^2.2.0"
+  },
   }
 }
