--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "github-markdown-css": "^2.10.0",
+    "husky": "^0.14.3",
     "ipfs": "^0.32.1",
     "ipfs-mini": "^1.1.2",
     "markdown-it": "^8.4.2",
@@ -12,5 +13,10 @@
     "mz": "^2.7.0",
     "node-fetch": "^2.2.0"
   },
+  "scripts": {
+    "precommit": "yarn upload",
+    "upload": "node publish.js src/"
+
+    
   }
 }
