--- a/package.json
+++ b/package.json
@@ -8,13 +8,20 @@
     "husky": "^0.14.3",
     "ipfs": "^0.32.1",
     "ipfs-mini": "^1.1.2",
+    "lint-staged": "^7.2.2",
     "markdown-it": "^8.4.2",
     "markdown-it-katex": "^2.0.3",
     "mz": "^2.7.0",
     "node-fetch": "^2.2.0"
   },
+  "lint-staged": {
+    "*.{md}": [
+      "echo $(yarn upload | tail -2 | sed -n 1p) > readme.md",
+      "git add"
+    ]
+},
   "scripts": {
-    "precommit": "yarn upload",
+    "precommit": "lint-staged",
     "upload": "node publish.js src/"
   }
 }
