--- a/package.json
+++ b/package.json
@@ -5,21 +5,25 @@
   "license": "MIT",
   "dependencies": {
     "github-markdown-css": "^2.10.0",
-    "husky": "^0.14.3",
     "ipfs": "^0.32.1",
     "ipfs-mini": "^1.1.2",
-    "lint-staged": "^7.2.2",
     "markdown-it": "^8.4.2",
     "markdown-it-katex": "^2.0.3",
     "mz": "^2.7.0",
     "node-fetch": "^2.2.0"
   },
+  "devDependencies": {
+    "husky": "^0.14.3",
+    "lint-staged": "^7.2.2"
+  },
   "lint-staged": {
     "*": [
+      "git stash --keep-index",
       "echo $(yarn upload | tail -2 | sed -n 1p) > readme.md",
-      "git add"
+      "git add",
+      "git stash pop"
     ]
-},
+  },
   "scripts": {
     "precommit": "lint-staged",
     "upload": "node publish.js src/"
