--- a/package.json
+++ b/package.json
@@ -12,20 +12,7 @@
     "mz": "^2.7.0",
     "node-fetch": "^2.2.0"
   },
-  "devDependencies": {
-    "husky": "^0.14.3",
-    "lint-staged": "^7.2.2"
-  },
-  "lint-staged": {
-    "*": [
-      "git stash --keep-index",
-      "echo $(yarn upload | tail -2 | sed -n 1p) > readme.md",
-      "git add",
-      "git stash pop"
-    ]
-  },
   "scripts": {
-    "precommit": "lint-staged",
-    "upload": "node publish.js src/"
+    "upload": "echo $(node publish.js src/ | tail -1) > readme.md; cat readme.md"
   }
 }
